added input field and button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
     <body>
 
+        <input id="input" type="text" name="Input">
+        <div id="buttonDiv">
+            <button id="setValue">Print Results</button>
+        </div>
+        <div id="outputDiv"></div>
+
         <script src="strings.js"></script>
     </body>
 </html>
