enter button working, beginning functions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
         <div id="outputDiv"></div>
 
+        <!-- <script src="this.js"></script> -->
         <script src="strings.js"></script>
     </body>
 </html>
